# Hypervisor-101-in-Rust

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
course/: HOW_TO_UPDATE.md  README.md  book.toml
course/src/: SUMMARY.md
course/src/conclusion/: README.md  resources.md  thank-you.md  whats-next.md  wrap-up.md
course/src/hypervisor-setup-and-operation-cycle/: 1-enable-system-software-enables-hw-vt-and-becomes-a-hypervisor.md  2-set-up-the-hypervisor-creates-and-sets-up-a-context-structure-representing-a-guest.md  3-switch-to-the-hypervisor-asks-the-processor-to-load-the-context-structure-into-hardware-registers-and-start-running-in-guest-mode.md  4-return-from-the-processor-switches-back-to-the-host-mode-on-certain-events-in-the-guest-mode.md  5-handle-the-hypervisor-typically-emulates-the-event-and-does-4-repeating-the-process.md  README.md  another-hypervisor-design-deprivileging-current-execution-context.md  causes-of-vm-exits.md  deeper-look-into-guest-mode-transition.md  e1-enabling-vmxsvm.md  e2-settings-up-the-vmcsvmcb.md  e3-configuring-guest-state-in-the-vmcsvmcb.md  exercise-preparation-building-and-running-the-hypervisor-and-navigating-code.md  exercise-preparation-code-annotations-and-solutions.md  hypervisor-setup-and-operation-cycle-1.md  our-goals-and-exercises-in-this-chapter.md  testing-with-bochs.md
course/src/introduction/: README.md  classification-of-hypervisors.md  demo-our-hypervisor-fuzzer.md  how-we-achieve-the-goals.md  hypervisor-vs-host-vm-vs-guest.md  motivation.md  our-fuzzer-design.md  our-hypervisor-design.md  prerequisites.md  rust.md  the-goals-of-this-course.md  types-of-hypervisors.md  uefi-applications.md  what-this-class-is-not.md  what-you-learn.md  why-hypervisor-for-fuzzing.md
course/src/memory-virtualization/: 10000-feet-view-comparison-of-traditional-and-nested-paging.md  README.md  advanced-topics.md  e4-enabling-nested-paging.md  e5-building-nested-paging-structures-and-gpa---pa-translation.md  e6-implement-copy-on-write-and-fast-memory-revert-mechanism.md  memory-virtualization-1.md  nested-page-fault.md  nested-paging-structure-entries.md  nested-paging.md  our-goals-and-exercises-in-this-chapter.md  relation-to-hypervisor.md  terminologies.md  x64-traditional-paging.md
course/src/vm-introspection-for-fuzzing/: README.md  basic-block-coverage-tracking-through-patches.md  catching-possible-bugs.md  demo-coverage-tracking.md  demo-end-marker.md  e7-enabling-ud-exception-interception.md  e8-enabling-bp-interception-and-coverage-tracking.md  exception-handling.md  exception-interception.md  introduction-to-patching.md  our-design.md  our-goals-and-exercises-in-this-chapter.md  problem-1-unnecessary-code-execution.md  problem-2-cannot-tell-efficacy-of-corpus-and-mutation.md
hypervisor/: Cargo.toml  README.md
hypervisor/.cargo/: config.toml
hypervisor/src/: allocator.rs  config.rs  corpus.rs  disk.rs  global_state.rs  hypervisor.rs  logger.rs  main.rs  mutation_engine.rs  panic.rs  patch.rs  shell.rs  snapshot.rs  stats.rs  system_table.rs  vm.rs  x86_instructions.rs
hypervisor/src/hardware_vt/: mod.rs  svm.rs  svm_run_vm.S  vmx.rs  vmx_run_vm.S
tests/: README.md  ida_generate_patch.py  ida_highlight_coverage.py  ida_reset_highlight.py  startup.nsh
tests/bochs/: README.md  linux_amd.bxrc  linux_intel.bxrc  macos_amd.bxrc  macos_intel.bxrc  windows_amd.bxrc  windows_intel.bxrc
tests/bochs/bios/: OVMF.fd  VGABIOS-lgpl-latest
xtask/: Cargo.toml
xtask/src/: bochs.rs  main.rs  vmware.rs
