[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A build and test assist program"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cfg-if = "1.0"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.2"
wsl = "0.1"
